--- a/source/scripts/templates/classes.jade
+++ b/source/scripts/templates/classes.jade
@@ -1,8 +1,8 @@
 - each klass in classes
-    .class-list-item(data-classid=klass.id)
-        .class-list-item-colorcode(class='color'+klass.id)
-        .class-list-item-text.fullName= klass.fullName
-        .class-list-item-text.shortName= klass.shortName
+    .clsslist-itm.list-item(data-classid=klass.id)
+        .clsslist-itm-colorcode(class='color'+klass.id)
+        .clsslist-itm-text.fullName= klass.fullName
+        .clsslist-itm-text.shortName= klass.shortName
         ul.class-sublist
             - each section in klass.sections
                 li
