--- a/source/scripts/templates/tasks.jade
+++ b/source/scripts/templates/tasks.jade
@@ -1,8 +1,8 @@
 - each task in tasks
-    - var klass= ((task.checked) ? 'task-list-item checked' : 'task-list-item')
+    - var klass= ((task.checked) ? 'list-item tsklist-itm checked' : 'list-item tsklist-itm')
     a(class=klass, data-classID=task.classID, data-taskID=task.id, href="#class/#{task.classID}/task/#{task.id}")
-        .task-list-item-box
-        .task-list-item-text
-            .task-list-item-name= task.taskName
-            .task-list-item-subtext= task.subtext
-        .task-list-item-tag(class="color"+task.classID)= task.shortName
+        .tsklist-itm-box
+        .tsklist-itm-text
+            .tsklist-itm-name= task.taskName
+            .tsklist-itm-subtext= task.subtext
+        .tsklist-itm-tag(class="color"+task.classID)= task.shortName
