changes before ux quesitonaire

--- a/source/css/_mixins.less
+++ b/source/css/_mixins.less
@@ -41,7 +41,7 @@
 
 .whitebox(@size) {
     background-color: white;
-    //border: 1px solid lighten(grey, 20%);
+    /*border: 1px solid lighten(grey, 20%);*/
     box-shadow: lighten(black, 50%) 0 1px @size;
 }
 
